# ImageGalery

./: CMakeLists.txt  CoruselList.qml  LoadingAnimation.qml  Main.qml  README.md  downloader.cpp  downloader.h  imagesmodel.cpp  imagesmodel.h  main.cpp  settings.cpp  settings.h
